finished the image pop up and now i saw a bug in top of the btn Add Friend it is somehow a div not visibile when u click on it it shows you the pop Up

--- a/client/src/Components/Post/Post.css
+++ b/client/src/Components/Post/Post.css
@@ -98,6 +98,7 @@
 .rowP3 img{
     width: 100%;
     height: auto;
+    cursor: pointer;
     object-fit: cover;
     border-radius: 0.24rem;
 }
@@ -325,4 +326,30 @@
 }
 .PostSkelton2{
     width: 100% !important;
+}
+
+.imageClickedFixedPosition{
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    inset: 0;
+    z-index: 9999999999999999999999;
+    height: 100vh;
+    width: 100%;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.4s all ease-in-out;
+}
+.showimageClickedFixedPosition{
+    opacity: 1;
+    visibility: visible;
+}
+.imageClickedFixedPosition img{
+    height: 600px;
+    width: auto;
+    max-width: 90%;
+    object-fit: cover;
+    border-radius: 0.25rem;
 }
