--- a/client/src/Pages/Profile/index.css
+++ b/client/src/Pages/Profile/index.css
@@ -325,6 +325,7 @@
     object-fit: cover;
     border-radius: 0.3rem;
 }
+
 .imageClickedFixedPosition{
     position: fixed;
     background-color: rgba(0, 0, 0, 0.8);
@@ -335,6 +336,13 @@
     z-index: 9999999999999999999999;
     height: 100vh;
     width: 100%;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.4s all ease-in-out;
+}
+.showimageClickedFixedPosition{
+    opacity: 1;
+    visibility: visible;
 }
 .imageClickedFixedPosition img{
     height: 600px;
